manifest_staging/deployment/provider-azure-installer-windows.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: csi-secrets-store-provider-azure
  name: csi-secrets-store-provider-azure-windows
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: csi-secrets-store-provider-azure
  template:
    metadata:
      labels:
        app: csi-secrets-store-provider-azure
    spec:
      serviceAccountName: csi-secrets-store-provider-azure
      containers:
        - name: provider-azure-installer
          image: mcr.microsoft.com/oss/v2/azure/secrets-store/provider-azure:v1.8.0
          imagePullPolicy: IfNotPresent
          args:
            - --endpoint=unix://C:\\provider\\azure.sock
            - --construct-pem-chain=true
            - --healthz-port=8989
            - --healthz-path=/healthz
            - --healthz-timeout=5s
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8989
            failureThreshold: 3
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 8898
              name: metrics
              protocol: TCP
          volumeMounts:
            - mountPath: "C:\\provider"
              name: providervol
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - virtual-kubelet
      volumes:
        - name: providervol
          hostPath:
            path: "C:\\k\\secrets-store-csi-providers"
            type: DirectoryOrCreate
      tolerations:
      - operator: Exists
      nodeSelector:
        kubernetes.io/os: windows
